RESOLVED FIXED 268683
REGRESSION (267163@main): Name for ::slotted pseudo element inside container query resolved against wrong scope
https://bugs.webkit.org/show_bug.cgi?id=268683
Summary REGRESSION (267163@main): Name for ::slotted pseudo element inside container ...
Antti Koivisto
Reported 2024-02-02 22:47:28 PST
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-02 22:49:59 PST
Antti Koivisto
Comment 2 2024-02-02 23:26:04 PST
EWS
Comment 3 2024-02-03 12:37:57 PST
Committed 274050@main (82679256a415): <https://commits.webkit.org/274050@main> Reviewed commits have been landed. Closing PR #23806 and removing active labels.
Antti Koivisto
Comment 4 2024-02-05 02:17:44 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/44395
Note You need to log in before you can comment on or make changes to this bug.