REGRESSION (267163@main): Name for ::slotted pseudo element inside container query resolved against wrong scope https://bugs.webkit.org/show_bug.cgi?id=268683 rdar://122224135

Reviewed by Alan Baradlay.

The name in

@container name (width) { ::slotted(*) { } }

is resolved against wrong scope when matching ::slotted.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-name-tree-scoped-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-name-tree-scoped.html:
* Source/WebCore/style/ContainerQueryEvaluator.cpp:
(WebCore::Style::ContainerQueryEvaluator::selectContainer):

Use the host of the originating element (<slot>) for :host scope resolution when matching ::slotted() rules.

Canonical link: https://commits.webkit.org/274050@main