Source/WebCore/style/ContainerQueryEvaluator.cpp
@@ -108,7 +108,7 @@ const Element* ContainerQueryEvaluator::selectContainer(OptionSet<CQ::Axis> axes
         RELEASE_ASSERT_NOT_REACHED();
     };
 
-    auto isContainerForQuery = [&](const Element& candidateElement) {
+    auto isContainerForQuery = [&](const Element& candidateElement, const Element* originatingElement = nullptr) {
         auto* style = candidateElement.existingComputedStyle();
         if (!style)
             return false;
@@ -119,7 +119,8 @@ const Element* ContainerQueryEvaluator::selectContainer(OptionSet<CQ::Axis> axes
         return style->containerNames().containsIf([&](auto& scopedName) {
             auto isNameFromAllowedScope = [&](auto& scopedName) {
                 // Names from :host rules are allowed when the candidate is the host element.
-                auto isHost = element.shadowHost() == &candidateElement;
+                auto* host = originatingElement ? originatingElement->shadowHost() : element.shadowHost();
+                auto isHost = host == &candidateElement;
                 if (scopedName.scopeOrdinal == ScopeOrdinal::Shadow && isHost)
                     return true;
                 // Otherwise names from the inner scopes are ignored.
@@ -146,7 +147,7 @@ const Element* ContainerQueryEvaluator::selectContainer(OptionSet<CQ::Axis> axes
     if (auto* originatingElement = findOriginatingElement()) {
         // For selectors with pseudo elements, query containers can be established by the shadow-including inclusive ancestors of the ultimate originating element.
         for (auto* ancestor = originatingElement; ancestor; ancestor = ancestor->parentOrShadowHostElement()) {
-            if (isContainerForQuery(*ancestor))
+            if (isContainerForQuery(*ancestor, originatingElement))
                 return ancestor;
         }
         return nullptr;
